--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "gulp-sharepoint-sync",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Upload files to a SharePoint library.",
   "dependencies": {},
   "devDependencies": {
     "adal-node": "^0.1.18",
     "bluebird": "^3.3.1",
-    "chalk": "^1.1.1",
     "events": "^1.1.0",
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
+    "fs": "0.0.2",
     "object-assign": "^4.0.1",
     "parallel-transform": "^0.2.2",
+    "path": "^0.12.7",
     "request-promise": "^2.0.0",
-    "through2": "^2.0.1",
+    "stream": "0.0.2",
     "timezone": "0.0.48",
     "url": "^0.11.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "vinyl": "^1.1.1"
   },
   "files": [
     "index.js",
