--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "gulp-sharepoint-sync",
   "version": "0.0.2",
   "description": "Upload files to a SharePoint library.",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "adal-node": "^0.1.18",
     "bluebird": "^3.3.1",
     "events": "^1.1.0",
@@ -18,6 +17,7 @@
     "util": "^0.10.3",
     "vinyl": "^1.1.1"
   },
+  "devDependencies": {},
   "files": [
     "index.js",
     "lib"
