--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.3.1",
     "events": "^1.1.0",
     "fs": "0.0.2",
+    "mime": "^1.3.4",
     "object-assign": "^4.0.1",
     "parallel-transform": "^0.2.2",
     "path": "^0.12.7",
